src/test/ui/issues/issue-13058.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-13058.rs:24:21
   |
LL |     let cont_iter = cont.iter();
   |                     ^^^^

warning: not reporting region error due to nll
  --> $DIR/issue-13058.rs:24:26
   |
LL |     let cont_iter = cont.iter();
   |                          ^^^^

error[E0308]: mismatched types
  --> $DIR/issue-13058.rs:36:11
   |
LL |     check((3, 5));
   |           ^^^^^^
   |           |
   |           expected reference, found tuple
   |           help: consider borrowing here: `&(3, 5)`
   |
   = note: expected type `&_`
              found type `({integer}, {integer})`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
